--- a/src/app/courses/html/html.component.html
+++ b/src/app/courses/html/html.component.html
@@ -38,4 +38,17 @@
 
 
   <div class="border-right">
-</div>
+    <tabs>
+      <tab [tabTitle]="'Overview'"><p>
+        This course blablab
+      </p></tab>
+      <tab tabTitle="Lessons">
+        <ul>
+          <li> <span id="lessons">Lesson 1:</span> <span>Structure</span> </li>
+          <li> <span id="lessons">Lesson 2: </span> <span>HTML Elements</span></li>
+          <li> <span id="lessons">Lesson 3: </span><span>Your first web-page</span></li>
+        </ul>
+      </tab>
+    </tabs>
+
+  </div>
