--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,6 +1,6 @@
 <header>
 
-    <img src="https://www.a-eskwadraat.nl/Vereniging/Commissies/spocie/logos/sogyo.png" />
+    <!-- <img src="https://www.a-eskwadraat.nl/Vereniging/Commissies/spocie/logos/sogyo.png" /> -->
 
   <nav role="navigation">
     <ul>
@@ -21,6 +21,7 @@
           <ul>
             <li><a href="/profile/progress">Progress</a></li>
             <li><a href="/profile/settings">Settings</a></li>
+            <li><a href="/profile/users">Users</a></li>
           </ul>
         </div>
       </li>
