--- a/src/app/progress/progress.component.css
+++ b/src/app/progress/progress.component.css
@@ -6,17 +6,16 @@ progress {
 }
 
 progress[value]::-webkit-progress-bar {
-  background-color: #eee;
+  background-color: #DFDCE3;
   border-radius: 2px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
 }
 
 progress[value]::-webkit-progress-value {
-  background-image: -webkit-linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%), -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25)), -webkit-linear-gradient(left, #ff0808, #0cf747);
+  background-image: -webkit-linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%), -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25)), -webkit-linear-gradient(left, #FC4A1A, #F7B733);
   border-radius: 2px;
   background-size: 35px 20px, 100% 100%, 100% 100%;
 }
-
 
 ul li {
   float: left;
@@ -24,14 +23,25 @@ ul li {
 }
 
 ul h2 {
-  font: 15px "Libre Baskerville";
+    font-weight: normal;
+  font-size: 15px;
+  font-family: Cambria;
+  color: #DFDCE3
 }
 
 ul li {
-  font: 10px "Libre Baskerville";
+    font-weight: normal;
+  font-size: 10px;
+  letter-spacing: 0.05em;
+  font-family: Cambria;
+  color: #DFDCE3
 }
 
 h1 {
-    font: 22px "Libre Baskerville";
-  margin-left: 60px;
+  font-weight: normal;
+  font-size: 24px;
+  font-family: Cambria, serif;
+  margin-left: 16px;
+  color: #DFDCE3;
+      margin-top: 25px;
 }
