--- a/src/app/courses/html/html.component.css
+++ b/src/app/courses/html/html.component.css
@@ -6,7 +6,7 @@
 .border-left-up, .border-left-down {
   width: 16%;
   height: 280px;
-  border: solid 1px #9A9A9A;
+  border: solid 1px #FC4A1A ;
   border-radius: 10px;
 }
 
@@ -19,18 +19,19 @@
   border-radius: 10px;
   width: 55%;
   height: 600px;
-  border: solid 1px #9A9A9A;
+  border: solid 1px #FC4A1A;
 }
 
 h3 {
-font-family: "Montserrat";
+font-family: Cambria;
 font-size: 16px;
 margin-left: 41px;
 margin-top: 30px;
 }
 
 .list-group-item-heading {
-  font: 13px bold "Montserrat";
+  font-family: Cambria;
+  font-size: 13px;
   color: black;
   text-decoration: none;
   text-align: center;
@@ -38,67 +39,84 @@ margin-top: 30px;
 
 .img-responsive {
   margin: 30px auto auto auto;
-  height: 140px;
+  height: 55%;
   width: auto;
   display: block;
   border-radius: 10px;
 }
 
-#enroll span {
-  border: 1px solid rgb(63, 135, 51);
+
+
+#enroll button {
+  border: 1px solid #F7B733;
   text-align: center;
-  color: rgb(255, 255, 255);
+  color: #DFDCE3;
   display: block;
   margin: 25px auto auto auto;
   line-height: 28px;
   width: 80%;
   height: 25px;
   vertical-align: middle;
-  background-color: rgb(63, 135, 51);
+  background-color: #F7B733;
   border-radius: 10px;
 }
 
-#enroll span,p, header nav ul li a div {
-  font: 13px "Libre Baskerville";
+#enroll button,p, header nav ul li a div {
+  font-family: Cambria;
+  font-size: 18px;
+  line-height: normal;
 }
 
 p {
   margin-left: 24px;
+      color: #DFDCE3;
 }
 
 span hr {
+
   width: 80%;
 }
 
 header nav ul li a  {
 text-decoration: none;
-color: black;
+
 }
 
 header nav ul li {
     list-style-type: none;
+
 }
 header nav ul li div {
   display: inline-block;
   margin-left: 3px;
   margin-top: 5px;
 
+
 }
 div tabs tab ul li {
-  margin-left: 16px;
+  margin-left: 15px;
   list-style-type: none;
+
 }
 
-div tabs tab ul li span{
+div tabs tab ul li a, div tabs tab ul li span{
+  font-family: Cambria;
+  font-size: 18px;
+    color: #DFDCE3;
+    text-decoration: none;
+}
 
-    font: 11.5px "Libre Baskerville";
+div tabs tab ul li :hover {
+  color: #FC4A1A;
 }
 
 div tabs tab p {
-  margin-left: 55px;
-  font: 11.5px "Libre Baskerville";
+  margin-left: 54px;
+  font-family: Cambria;
+  font-size: 18px;
+      color: #DFDCE3;
 }
 
-#lessons {
- font-weight: bold;
+div hr {
+  border-color: #FC4A1A
 }
