--- a/src/app/courses/html/tabs.component.css
+++ b/src/app/courses/html/tabs.component.css
@@ -6,11 +6,13 @@ ul li {
 
 ul li a {
   text-decoration: none;
-  color: black;
+  color: #DFDCE3;
+  font-family: Cambria;
+  font-size: 18px;
   margin-left: 30px;
 
 }
 
 ul li :hover {
-  text-decoration: underline rgb(127, 201, 121);
+    color: #FC4A1A;
 }
