--- a/src/app/progress/progress.component.html
+++ b/src/app/progress/progress.component.html
@@ -7,10 +7,10 @@
 
 <ul>
   <li>
-    <h2>Introductie</h2>
+    <h2>Introduction</h2>
 
     <p style="width:80%" data-value="80">HTML</p>
-    <progress max="100" value="00" class="html5">
+    <progress max="100" value="80" class="html5">
 
                 <span style="width: 80%">80%   </span>
 
