general template for every course is done issue: 26727

--- a/src/app/courses/bootstrap/bootstrap.component.html
+++ b/src/app/courses/bootstrap/bootstrap.component.html
@@ -1,7 +1,6 @@
 <app-headercomponent></app-headercomponent>
-<br />
-<br />
-<br />
-<p>
-  bootstrap works!
-</p>
+
+<app-template name = "Bootstrap" category ="CSS Templates" urlName=
+"http://w3widgets.com/responsive-slider/img/bootstrap.png" description=
+"TEXT" lesson1="
+??" lesson2="??"></app-template>
