--- a/src/app/courses/emberjs/emberjs.component.html
+++ b/src/app/courses/emberjs/emberjs.component.html
@@ -1,7 +1,6 @@
 <app-headercomponent></app-headercomponent>
-<br />
-<br />
-<br />
-<p>
-  emberjs works!
-</p>
+
+<app-template name = "Ember.JS" category ="MVVM Framework" urlName=
+"https://upload.wikimedia.org/wikipedia/en/6/69/Ember.js_Logo_and_Mascot.png" description=
+"TEXT" lesson1="
+??" lesson2="??"></app-template>
