--- a/src/app/courses/javascript/javascript.component.html
+++ b/src/app/courses/javascript/javascript.component.html
@@ -1,7 +1,6 @@
 <app-headercomponent></app-headercomponent>
-<br />
-<br />
-<br />
-<p>
-  javascript works!
-</p>
+
+<app-template name = "JavaScript" category ="Interactivity" urlName=
+"https://lh6.ggpht.com/qkztq4tWAPIfgfld8l0er0jDyprt6KVq61ZI-2DDhtkgvWmA7HjY2mjTxqn93VYJdsI=w300-rw" description=
+"TEXT" lesson1="
+??" lesson2="??"></app-template>
