--- a/src/app/courses/threejs/threejs.component.html
+++ b/src/app/courses/threejs/threejs.component.html
@@ -1,7 +1,6 @@
 <app-headercomponent></app-headercomponent>
-<br />
-<br />
-<br />
-<p>
-  threejs works!
-</p>
+
+<app-template name = "Three.JS" category ="3D Library" urlName=
+"http://www.weblisty.net/img/threejs-logo.png" description=
+"TEXT" lesson1="
+??" lesson2="??"></app-template>
