--- a/src/app/courses/angularjs/angularjs.component.html
+++ b/src/app/courses/angularjs/angularjs.component.html
@@ -1,7 +1,6 @@
 <app-headercomponent></app-headercomponent>
-<br />
-<br />
-<br />
-<p>
-  angularjs works!
-</p>
+
+<app-template name = "Angular.JS" category ="MVC Framework" urlName=
+"https://lh5.ggpht.com/jmf9wX16pWQWHFe7Polc1b_FjBkQIkpqwSIvyuCgOwn4M3akBLpkveqJXKy3PGHjAzk=h310-rw" description=
+"TEXT" lesson1="
+??" lesson2="??"></app-template>
