--- a/src/app/courses/css/css.component.html
+++ b/src/app/courses/css/css.component.html
@@ -1,3 +1,5 @@
 <app-headercomponent></app-headercomponent>
 
-<app-html name = "CSS"></app-html>
+<app-template name = "CSS" category ="WebDesign" urlName=
+"https://techchurian.files.wordpress.com/2013/02/css3-logo.png" description=" dfsdlkfjsdklf sdf" lesson1="
+Selectors" lesson2="Flexbox"></app-template>
