add button to add new course 26727 + active users 26715

--- a/src/app/courses/template/template.component.html
+++ b/src/app/courses/template/template.component.html
@@ -43,7 +43,7 @@
       </p></tab>
       <tab tabTitle="Lessons" >
         <ul>
-          <li> <a href="courses/html/lesson1" >Lesson 1:</a> <span>{{lesson1}}</span> </li>
+          <li> <a href="{{urlLesson1}}" >Lesson 1:</a> <span>{{lesson1}}</span> </li>
           <li> <a >Lesson 2: </a> <span>{{lesson2}}</span></li>
           <li> <a >Lesson 3: </a><span>{{lesson3}}</span></li>
         </ul>
