--- a/src/app/courses/course-list/course-item.component.html
+++ b/src/app/courses/course-list/course-item.component.html
@@ -1,8 +1,12 @@
 <a href="{{course.urlPath}}" class="list-group-item-clearfix">
   <span>
+
+
       <img class = "img-responsive"
-          src = "{{course.imagePath}}"
-          style = "..."/>
+                  src = "{{course.imagePath}}"
+          style = "..."
+        />
+
   </span>
   <div>
     <h4 class="list-group-item-heading">{{course.name}}</h4>
