deleted unneccesary code

--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,8 +1,6 @@
 <div class="row">
   <div class="col-md-5">
-  <course-list> (courseSelected)="selectedCourse= $event"></course-list>
+  <course-list> </course-list>
   </div>
-  <div class="col-md-7">
-    <course-detail [selectedCourse] = "selectedCourse"></course-detail>
-</div>
+
 </div>
