--- a/src/app/courses/bootstrap/bootstrap.component.html
+++ b/src/app/courses/bootstrap/bootstrap.component.html
@@ -1,6 +1,6 @@
 <app-headercomponent></app-headercomponent>
 
 <app-template name = "Bootstrap" category ="CSS Templates" urlName=
-"http://w3widgets.com/responsive-slider/img/bootstrap.png" description=
+"/assets/bootstrap.png" description=
 "TEXT" lesson1="
-??" lesson2="??"></app-template>
+??" lesson2="??" progressUrl="/assets/bootstrap-inprogress.png" finishedUrl="/assets/bootstrap-done.png"></app-template>
