--- a/src/app/courses/javascript/javascript.component.html
+++ b/src/app/courses/javascript/javascript.component.html
@@ -1,6 +1,6 @@
 <app-headercomponent></app-headercomponent>
 
 <app-template name = "JavaScript" category ="Interactivity" urlName=
-"https://lh6.ggpht.com/qkztq4tWAPIfgfld8l0er0jDyprt6KVq61ZI-2DDhtkgvWmA7HjY2mjTxqn93VYJdsI=w300-rw" description=
+"/assets/javascript-geel.png" description=
 "TEXT" lesson1="
-??" lesson2="??"></app-template>
+??" lesson2="??" progressUrl="/assets/javascript-inprogress.png" finishedUrl="/assets/javascript-done.png"></app-template>
