--- a/src/app/courses/template/template.component.html
+++ b/src/app/courses/template/template.component.html
@@ -18,7 +18,8 @@
   </span>
     <div>
       <div id="enroll">
-        <button onclick="document.getElementById('myImage').src='https://vignette3.wikia.nocookie.net/gotascent/images/c/c0/Work_In_Progress.png/revision/latest?cb=20140715110801'">Enroll</button>
+        <button (click)="progressImage()">Enroll</button>
+        <button (click)="finishedImage()">Finished</button>
       </div>
     </div>
   </div>
