--- a/src/app/courses/threejs/threejs.component.html
+++ b/src/app/courses/threejs/threejs.component.html
@@ -1,6 +1,6 @@
 <app-headercomponent></app-headercomponent>
 
 <app-template name = "Three.JS" category ="3D Library" urlName=
-"http://www.weblisty.net/img/threejs-logo.png" description=
+"/assets/threejs.png" description=
 "TEXT" lesson1="
-??" lesson2="??"></app-template>
+??" lesson2="??" progressUrl="/assets/threejs-inprogress.png" finishedUrl="/assets/threejs-done.png"></app-template>
