--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,6 +1,6 @@
 <header>
 
-    <!-- <img src="https://www.a-eskwadraat.nl/Vereniging/Commissies/spocie/logos/sogyo.png" /> -->
+    <img src="/assets/logo-totaal.png" />
 
   <nav role="navigation">
     <ul>
