--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
   html {
-    background: radial-gradient( #4ABCAD, #62CDC3);
+    background: #4ABCAD;
   }
