--- a/src/app/courses/jquery/jquery.component.html
+++ b/src/app/courses/jquery/jquery.component.html
@@ -1,4 +1,4 @@
 <app-headercomponent></app-headercomponent>
 
-<app-template name="jQuery" category="JS Library" urlName="http://www.mangooranges.com/wp-content/uploads/2007/08/jquery_avatar_400x4001.png" description="TEXT" lesson1="
-??" lesson2="??"></app-template>
+<app-template name="jQuery" category="JS Library" urlName="/assets/jquery.png" description="TEXT" lesson1="
+??" lesson2="??" progressUrl="/assets/jquery-inprogress.png" finishedUrl="/assets/jquery-done.png"></app-template>
