--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -7,7 +7,7 @@
 <h1> Users </h1>
 <br />
 <ul>
-  <li>Marjolein </li>
-  <li>Iris </li>
+  <li>Marjolein (active) </li>
+  <li>Iris (active)</li>
   <li> </li>
 </ul>
