image for new course + progress bar to home-page (interactive)

--- a/src/app/courses/course-list/course-item.component.css
+++ b/src/app/courses/course-list/course-item.component.css
@@ -42,3 +42,25 @@ font-weight: normal;
   background-color: #F7B733;
   opacity: 0.6;
 }
+
+progress {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 250px;
+  height: 15px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+progress[value]::-webkit-progress-bar {
+  background-color: #DFDCE3;
+  border-radius: 2px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+}
+
+progress[value]::-webkit-progress-value {
+  background-image: -webkit-linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%), -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25)), -webkit-linear-gradient(left, #F7B733, #FC4A1A);
+  border-radius: 2px;
+  background-size: 35px 20px, 100% 100%, 100% 100%;
+}
