--- a/src/app/courses/course-list/course-item.component.html
+++ b/src/app/courses/course-list/course-item.component.html
@@ -9,6 +9,9 @@
   <div>
     <h4 class="list-group-item-heading">{{course.name}}</h4>
     <p class="list-group-item-text">{{course.description}}</p>
+
+<progress max="100" value="{{course.progress}}" ></progress>
+
   </div>
 
 </a>
