--- a/src/app/progress/progress.component.html
+++ b/src/app/progress/progress.component.html
@@ -2,7 +2,7 @@
 <br />
 <br />
 <br />
-<h1> Progress</h1>
+<h1>Progress</h1>
 
 
 <ul>
@@ -10,7 +10,7 @@
     <h2>Introduction</h2>
 
     <p style="width:80%" data-value="80">HTML</p>
-    <progress max="100" value="80" ></progress>
+    <progress max="100" value="{{course.progress}}" ></progress>
 
     <p style="width:60%" data-value="60">CSS</p>
     <progress max="100" value="0" ></progress>
