add temporary pictures for progress en done

--- a/src/app/courses/css/css.component.html
+++ b/src/app/courses/css/css.component.html
@@ -2,4 +2,4 @@
 
 <app-template name = "CSS" category ="WebDesign" urlName=
 "/assets/css.png" description=" dfsdlkfjsdklf sdf" lesson1="
-Selectors" lesson2="Flexbox"></app-template>
+Selectors" lesson2="Flexbox" urlLesson1="courses/css/lesson1" progressUrl="/assets/css-inprogress.png" finishedUrl="/assets/css-done.png"></app-template>
