--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -6,6 +6,10 @@
 <br />
 
 <course-courses></course-courses>
+<div>
+        <input [(ngModel)]="input">
+        <span type="submit" (click)="addCourse(input)">Add</span>
+    </div>
 
 <div class="footer">
   <img src="/assets/logo-klein.jpg" />
