added profiel page, with icon for user

--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -12,7 +12,7 @@
         </a>
       </li>
       <li id="profile">
-        <a >
+        <a href="/profile" >
           <div>
             Profile
           </div>
