--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,1 +1,18 @@
 
+h1 {
+  font-weight: normal;
+  font-size: 24px;
+  font-family: Cambria, serif;
+  color: #DFDCE3;
+  margin-top: 25px;
+  text-align: center;
+}
+
+img {
+  width: 10%;
+  border-radius: 100%;
+  border: 1px solid #FC4A1A;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
