--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,9 @@
 <app-headercomponent></app-headercomponent>
+<br />
+<br />
+<br />
+<br />
 
-<h1> ProfileComponent</h1>
+
+<h1> Name of user </h1>
+<img src="/assets/user.png"/> 
