made profile page with image and name + made settings page with form/input fields

--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -14,7 +14,7 @@
         />
 
   </span>
-        <input [(ngModel)]="input" placeholder = "Which course do you want to add?" >
+        <input [(ngModel)]="input" placeholder = "What course do you want to add?" >
         <button (click)="addCourse(input)" type="submit">Add</button>
     </div>
 
