--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,7 +3,9 @@
 <br />
 <br />
 <br />
-
-
+<br />
+<img id="logo"src="/assets/user.png"/>
 <h1> Name of user </h1>
-<img src="/assets/user.png"/> 
+<div class="footer">
+  <img src="/assets/logo-klein.jpg" />
+</div>
