--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -8,11 +8,30 @@ h1 {
   text-align: center;
 }
 
-img {
+#logo {
   width: 10%;
   border-radius: 100%;
   border: 1px solid #FC4A1A;
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+.footer img {
+  width: 15%;
+display: block;
+margin-left: auto;
+margin-right: auto;
+
+}
+
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #4ABDAC;
+  text-align: center;
+  top: 1200px;
 }
