--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -57,6 +57,14 @@ button:hover {
 button:disabled {
   cursor: not-allowed;
 }
+img {
+  display: block;
+  width: 100px;
+}
+img[src="Error.src"] {
+  display: none;
+}
+
 
 form .ng-invalid {
   border: 0px transparent;
