--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -45,7 +45,7 @@
         size="40"
         (change) = "changeListener($event)"
         id="profile-img">
-        <img src="" id ="profile-img-tag" width="200x" />
+        <img src="Error.src" id ="profile-img-tag" />
         <button type="submit"
         [disabled]="!f.valid">Update your profile</button>
       </form>
