replaced logo in header to left top position, so it replaces the courses button

--- a/src/app/courses/template/lesson1/lesson1.component.html
+++ b/src/app/courses/template/lesson1/lesson1.component.html
@@ -6,3 +6,16 @@
 <p>
   lesson1 works!
 </p>
+<div class="container">
+  <div class="learn_pane">
+
+
+  </div>
+  <div class="editor_pane">
+
+
+  </div>
+  <div class="preview_pane">
+    
+  </div>
+</div>
