--- a/src/app/courses/template/template.component.html
+++ b/src/app/courses/template/template.component.html
@@ -46,9 +46,9 @@
       </tab>
       <tab tabTitle="Lessons">
         <ul>
-          <li> <a href="{{urlLesson1}}">Lesson 1:</a> <span>{{lesson1}}</span> </li>
-          <li> <a>Lesson 2: </a> <span>{{lesson2}}</span></li>
-          <li> <a>Lesson 3: </a><span>{{lesson3}}</span></li>
+          <li> <a href="{{urlLesson1}}">Lesson 1: {{lesson1}}</a></li>
+          <li> <a>Lesson 2: {{lesson2}} </a></li>
+          <li> <a>Lesson 3: {{lesson3}} </a></li>
         </ul>
       </tab>
     </tabs>
