--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,13 +1,13 @@
 <header>
 
-    <img src="/assets/logo-totaal.png" />
+    <!-- <img src="/assets/logo-totaal.png" /> -->
 
   <nav role="navigation">
     <ul>
       <li>
         <a href="/">
-          <div>
-            Courses
+          <div id = "course_hidden">
+            <img src="/assets/logo-totaal.png" /> Courses
           </div>
         </a>
       </li>
