--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -6,7 +6,7 @@
 <br />
 
 <course-courses></course-courses>
-<div  class = "list-group-item-clearfix" >
+<div class="list-group-item-clearfix">
   <span>
       <img class = "img-responsive"
                   src = "/assets/newcourse.png"
@@ -15,20 +15,12 @@
 
   </span>
   <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-        <input type = "text"
-        [(ngModel)]="newcourse.input"
-        placeholder = "What course do you want to add?"
-        name = "input" >
-        <input type="file"
-        [(ngModel)]="newcourse.coursepicture"
-        name="coursepicture"
-        size="30"
-        (change) = "changeListener($event)">
-        <img src="Error.src" id ="profile-img-tag" width="150px"/>
-        <button (click)="addCourse(newcourse.input, newcourse.coursepicture)" type="submit"
-        [disabled]="!f.valid">Add this course</button>
-          </form>
-    </div>
+    <input type="text" [(ngModel)]="newcourse.input" placeholder="What course do you want to add?" name="input">
+    <input type="file" [(ngModel)]="newcourse.coursepicture" name="coursepicture" size="30" (change)="changeListener($event)">
+    <img src="Error.src" id="profile-img-tag" width="150px" />
+    <button (click)="addCourse(newcourse.input, newcourse.coursepicture)" type="submit" [disabled]="!f.valid">Add this course</button>
+  </form>
+</div>
 
 <div class="footer">
   <img src="/assets/logo-klein.jpg" />
