--- a/src/app/courses/template/lesson1/lesson1.component.html
+++ b/src/app/courses/template/lesson1/lesson1.component.html
@@ -3,19 +3,16 @@
 <br />
 <br />
 <br />
-<p>
-  lesson1 works!
-</p>
+
 <div class="container">
   <div class="learn_pane">
-
-
+    <h1>Learn</h1>
   </div>
   <div class="editor_pane">
 
-
+    <h1>Coding</h1>
   </div>
   <div class="preview_pane">
-    
+    <h1>Preview page</h1>
   </div>
 </div>
