--- a/src/app/courses/template/lesson1/lesson1.component.html
+++ b/src/app/courses/template/lesson1/lesson1.component.html
@@ -7,6 +7,22 @@
 <div class="container">
   <div class="learn_pane">
     <h1>Learn</h1>
+
+
+    <ul class= "questions">
+      <ul *ngFor="let question of questions">
+        <p class="question">{{ question.questionText }}</p>
+        <ul class="answer" *ngFor="let answer of question.answers">
+          <input type="radio" >{{ answer.answerText }}
+        </ul>
+      </ul>
+
+    </ul>
+    <button class="btn" type="submit">Submit</button>
+    <div class="well">
+      <p>You got {{ correctCount }} out of {{questions.length}} right!</p>
+    </div>
+
   </div>
   <div class="editor_pane">
 
